# Sabrina-Local-AI

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DONE.md  Dockerfile  JOURNAL.md  NEEDS-INPUT.md  PROPOSED.md  QUEUE.md  README.md  STATE.md  docker-compose.yml  package-lock.json  requirements.txt  schedule.json  startup.sh
api/: automation_api.py  hearing_api.py  main.py  vision_api.py  voice_api.py
config/: presence_config.json  settings.yaml  voice_settings.json
core/: component_service_wrappers.py  config_mamanger.py  core.py  core_integration.py  enhanced_event_system.py  enhanced_sabrina_core.py  llm_input_framework.py  llm_integration_test.py  sabrina_core.py  state_machine.py
data/: conversation_history.json  default_memory.json
docker/hearing/: docker-compose.yml  hearing.Dockerfile  requirements.txt
docker/vision/: docker-compose.yml  requirements.txt  vision.Dockerfile
docker/voice/: docker-compose.yml  requirements.txt  voice.Dockerfile  voice_docker_requirements.txt
docs/: Sabrina AI - LLM Integration Guide.md  Sabrina AI Core Integration System.mermaid  architecture.md  folder_structure.md  onboarding.md  project_roadmap.md
rebuild/: ACTION_ITEMS.md  ROADMAP.md  get-specs.ps1  new-session-prompt.md  specs.txt  validate-007-windows.md  validate-007b-semantic-memory-gui.md  validate-automation.md  validate-avatar.md  validate-barge-in.md  validate-budget-caching.md  validate-supervisor-autostart.md  validate-thin-spot-split.md  validate-wake-word.md  when-you-return.md
rebuild/decisions/: 001-hardware-and-budget.md  002-tts-component-1-shipped.md  003-voice-loop-shipped.md  004-settings-gui-shipped.md  005-vision-shipped.md  006-end-of-night-status.md  007-semantic-memory-shipped.md  008-foundational-refactor-bundle.md  008-foundational-refactor-shipped.md  009-barge-in-shipped.md  010-personality-spec.md
rebuild/drafts/: 008-sqlite-vec-on-windows.md  009a-thin-spots-plan.md  asr-upgrade-plan.md  automation-brief.md  automation-plan.md  avatar-brief.md  avatar-plan.md  barge-in-plan.md  budget-and-caching-plan.md  config-schema-audit.md  local-vlm-plan.md  logging-vocabulary-plan.md  old-repo-migration-audit.md  onboarding-plan.md  personality-lift-plan.md  personality-plan.md  privacy-posture-plan.md  remaining-components-plan.md  router-plan.md  semantic-memory-gui-plan.md  supervisor-autostart-plan.md  thin-spot-split-plan.md  tool-use-plan.md  vision-polish-plan.md  wake-word-plan.md
roles/: digest.md  night-auditor.md  planner.md  researcher.md  worker.md
sabrina-2/: .env.example  .gitignore  README.md  install-piper.ps1  pyproject.toml  sabrina.toml
sabrina-2/src/sabrina/: __init__.py  __main__.py  bus.py  chat.py  cli.py  config.py  events.py  logging.py  settings_io.py  state.py  supervisor.py  voice_loop.py
sabrina-2/src/sabrina/brain/: __init__.py  claude.py  ollama.py  protocol.py
sabrina-2/src/sabrina/gui/: __init__.py  settings.py
sabrina-2/src/sabrina/listener/: __init__.py  faster_whisper.py  protocol.py  ptt.py  record.py  vad.py  wake_word.py
sabrina-2/src/sabrina/memory/: __init__.py  compaction.py  embed.py  store.py
sabrina-2/src/sabrina/speaker/: __init__.py  piper.py  protocol.py  sapi.py  voices.py
sabrina-2/src/sabrina/vision/: __init__.py  capture.py  hotkey.py  see.py  triggers.py
sabrina-2/tests/: test_smoke.py
scripts/: actions.py  component_integration_example.py  conversation_history.json  core.py  default_memory.json  error.txt  hearing.py  ocr_script.py  sabrina_ai_launcher.sh  sabrina_ai_launcher_windows.bat  sabrina_install.py  sabrina_local_ai.py  start_sabrina.py  vision.py  vision_module_test.py  voice.py  voice_module_test.py
services/automation/: README.md  automation.py  test_enhanced_automation.py
services/hearing/: hearing.py  test_hearing.py
services/presence/: README.md  __init__.py  animation_handler.py  animation_main.py  animation_manager.py  config_manager.py  constants.py  integration_example.py  presence_constants.py  presence_enhancements.py  presence_gui.py  presence_system.py  run.py  test_animation.py  test_presence_system.py
services/smart_home/: .env  docker-compose.yml  (+5 more)
test_results/: test_results_20250303_145244.json  test_results_20250303_175428.json  test_results_20250304_105739.json
tests/: README.md  Testing_Guide.md  __init__.py  component_integration_example.py  conftest.py  create_init_files.py  presence_module_test.py  pytest.ini  run_test.py  test_actions.py  test_automation.py  test_core.py  test_framework.py  test_integration.py  test_runner.py  test_vision.py  test_voice.py  testing.md  vision_module_test.py  voice_debug.py  voice_module_test.py
utilities/: config_manager.py  entry_point.py  error_handler.py  event_system.py  service_starter.py
(+65 files in other folders)
