[project]
name = "sabrina"
version = "0.0.1"
description = "Sabrina AI - personal daily-driver assistant"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "ollama>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "rich>=13.7",
    "typer>=0.12",
    "anyio>=4.3",
    # Speaker component
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "httpx>=0.27",
    # Windows-only: direct SAPI access for the zero-setup TTS fallback.
    "pywin32>=306; sys_platform == 'win32'",
    # Listener component (ASR)
    "faster-whisper>=1.0",
    "soundfile>=0.12",
    # Voice-loop component (push-to-talk hotkey)
    "pynput>=1.7",
    # Settings GUI
    "customtkinter>=5.2",
    "tomlkit>=0.13",
    # Vision component: screen capture + image resize/encode
    "mss>=9.0",
    "pillow>=10.0",
    # Semantic memory: ONNX-only embedder + sqlite-vec index.
    # Default backend is `onnxruntime + tokenizers` for all-MiniLM-L6-v2
    # (~80 MB model + ~10 MB wheels, no torch). Legacy
    # `sentence-transformers` backend lives in the optional
    # `legacy-embedder` extra. See decisions/drafts/011-onnx-embedder.md.
    "onnxruntime>=1.19",
    "tokenizers>=0.20",
    "sqlite-vec>=0.1.6",
    # Barge-in: Silero VAD via the pip package (ONNX weights ship inside
    # the wheel; no torch-hub download on first run). See decision 009.
    "silero-vad>=5.1",
    # Wake-word: openWakeWord ships several pretrained ONNX models
    # ("hey_jarvis", "alexa", etc.) and supports custom-trained ones.
    # onnxruntime comes transitively (already in deps above).
    # See `rebuild/drafts/wake-word-plan.md`.
    "openwakeword>=0.6",
]

[project.optional-dependencies]
# Only install if you want to pin the legacy sentence-transformers backend
# instead of the ONNX default. Pulls torch (~700 MB). Activate with:
#   uv sync --extra legacy-embedder
# then set `[memory.semantic.embedder] backend = "sentence-transformers"`
# in sabrina.toml.
legacy-embedder = [
    "sentence-transformers>=3.0",
]

[project.scripts]
sabrina = "sabrina.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sabrina"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
# Sabrina is Windows-only (per rebuild/ROADMAP.md). Restrict uv's
# resolution to Windows so we don't drag in Linux-only transitive
# branches that lack cp312 wheels. Concretely: openwakeword 0.6
# hard-depends on tflite-runtime>=2.8 with a Linux-platform marker,
# and tflite-runtime has no cp312 wheels. Without `environments`
# scoping, uv solves cross-platform and refuses the graph; with
# `["sys_platform == 'win32'"]` it skips the Linux branch entirely.
# Re-evaluate when Sabrina grows a Linux/macOS target.
environments = ["sys_platform == 'win32'"]
